# niv

./: .gitignore  README.md  amazon.csv  amazon.xlsx  flake.nix  items.csv  items.json  items.xlsx  pyproject.toml
cli/: main.py
cli/transforms/: __init__.py  aggregate.py  csv2excel.py  csv2xlsx.py  flatten.py  json2csv.py  xlsx2csv.py
cli/transforms/archive/: flatten.py
